popup was showing off screen, fixed it to show on screen

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,7 @@ div[class^="d"] {
 
 .popup {
   position: absolute;
-  display: inline-block;
+  /* display: inline-block; */
   cursor: pointer;
 }
 
@@ -100,7 +100,7 @@ div[class^="d"] {
   z-index: 1;
   border: 4px solid cornflowerblue;
   border-radius: 10px;
-  left: 500px;
+  left: 150px;
 }
 
 #myPopup {
